--- a/Savio/SavingPlanSetupCells/SavingPlanTitleTableViewCell.xib
+++ b/Savio/SavingPlanSetupCells/SavingPlanTitleTableViewCell.xib
@@ -26,7 +26,7 @@
                         <constraints>
                             <constraint firstAttribute="height" constant="43" id="wi9-JA-E9e"/>
                         </constraints>
-                        <color key="textColor" red="0.95686274510000002" green="0.69019607839999997" blue="0.2274509804" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.63921570780000003" green="0.63529413940000001" blue="0.63921570780000003" alpha="1" colorSpace="deviceRGB"/>
                         <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="18"/>
                         <textInputTraits key="textInputTraits"/>
                         <connections>
