--- a/Savio/SACreateSavingPlanViewController/SavingCategoryTableViewCell.xib
+++ b/Savio/SACreateSavingPlanViewController/SavingCategoryTableViewCell.xib
@@ -7,11 +7,9 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <mutableArray key="GothamRounded-Light.otf">
-            <string>GothamRounded-Light</string>
-        </mutableArray>
-        <mutableArray key="GothamRounded-Medium.otf">
-            <string>GothamRounded-Medium</string>
+        <mutableArray key="gotham-rounded-book-2.otf">
+            <string>GothamRounded-Book</string>
+            <string>GothamRounded-Book</string>
         </mutableArray>
     </customFonts>
     <objects>
@@ -32,24 +30,22 @@
                             <constraint firstAttribute="height" constant="47" id="cjv-Dr-EZK"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gorup Save" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EjD-IM-oCa">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Gorup Save" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EjD-IM-oCa">
                         <rect key="frame" x="75" y="8" width="100" height="25"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="25" id="MxG-9Z-3e0"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="17"/>
+                        <color key="textColor" red="0.50980392156862742" green="0.50980392156862742" blue="0.52941176470588236" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="obs-re-Qcr">
-                        <rect key="frame" x="75" y="29" width="237" height="26"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="obs-re-Qcr">
+                        <rect key="frame" x="75" y="33" width="237" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="obs-re-Qcr" secondAttribute="height" multiplier="237:26" id="92Q-SI-rvL"/>
                             <constraint firstAttribute="width" constant="237" id="cD6-pO-72o"/>
-                            <constraint firstAttribute="height" constant="26" id="pgo-s4-NdY"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="GothamRounded-Light" family="Gotham Rounded" pointSize="12"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="11"/>
+                        <color key="textColor" red="0.67450980392156867" green="0.67450980392156867" blue="0.68235294117647061" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -57,7 +53,7 @@
                     <constraint firstAttribute="trailingMargin" secondItem="EjD-IM-oCa" secondAttribute="trailing" constant="10" id="1nA-zS-1Q8"/>
                     <constraint firstItem="obs-re-Qcr" firstAttribute="leading" secondItem="aOo-vc-KOf" secondAttribute="trailing" constant="10" id="4Jn-hZ-wKv"/>
                     <constraint firstItem="aOo-vc-KOf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="Dyo-9C-e1j"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="obs-re-Qcr" secondAttribute="trailing" constant="10" id="K67-Q5-HxQ"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="obs-re-Qcr" secondAttribute="trailing" constant="5" id="K67-Q5-HxQ"/>
                     <constraint firstItem="EjD-IM-oCa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="Rzl-qm-PJs"/>
                     <constraint firstItem="obs-re-Qcr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="21" id="TAX-mc-dOv"/>
                     <constraint firstItem="EjD-IM-oCa" firstAttribute="leading" secondItem="aOo-vc-KOf" secondAttribute="trailing" constant="10" id="e02-W2-mXc"/>
