--- a/Savio/SavingPlanSetupCells/SavingPlanCostTableViewCell.xib
+++ b/Savio/SavingPlanSetupCells/SavingPlanCostTableViewCell.xib
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="GothamRounded-Medium.otf">
@@ -13,45 +12,30 @@
         <mutableArray key="gotham-rounded-book-2.otf">
             <string>GothamRounded-Book</string>
             <string>GothamRounded-Book</string>
+            <string>GothamRounded-Book</string>
         </mutableArray>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SavingPlanCostIdentifier" rowHeight="90" id="KGk-i7-Jjw" customClass="SavingPlanCostTableViewCell" customModule="Savio" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SavingPlanCostIdentifier" rowHeight="95" id="KGk-i7-Jjw" customClass="SavingPlanCostTableViewCell" customModule="Savio" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="104"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="98"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="103"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Which costs" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="owe-f5-37h">
                         <rect key="frame" x="8" y="10" width="304" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="hkN-1N-NzN"/>
+                            <constraint firstAttribute="height" constant="21" id="i9d-Mn-AaA"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="17"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ukx-QD-x5v">
-                        <rect key="frame" x="38" y="32" width="244" height="26"/>
-                        <color key="backgroundColor" red="0.25490196079999999" green="0.25490196079999999" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="26" id="N38-wx-JeH"/>
-                        </constraints>
-                        <color key="textColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
-                        <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="14"/>
-                        <textInputTraits key="textInputTraits"/>
-                        <connections>
-                            <outlet property="delegate" destination="-1" id="D0H-zM-UGm"/>
-                        </connections>
-                    </textField>
                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="3000" translatesAutoresizingMaskIntoConstraints="NO" id="ISQ-4m-YEC">
-                        <rect key="frame" x="36" y="60" width="248" height="31"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="30" id="EmY-No-c0B"/>
-                        </constraints>
+                        <rect key="frame" x="36" y="73" width="248" height="31"/>
                         <color key="minimumTrackTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="maximumTrackTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="thumbTintColor" red="0.95686274510000002" green="0.69019607839999997" blue="0.2274509804" alpha="1" colorSpace="calibratedRGB"/>
@@ -60,11 +44,11 @@
                         </connections>
                     </slider>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DQR-uk-sx8">
-                        <rect key="frame" x="18" y="71" width="12" height="12"/>
+                        <rect key="frame" x="18" y="82" width="12" height="12"/>
                         <color key="backgroundColor" red="0.25490196079999999" green="0.25490196079999999" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="12" id="D0y-CI-30I"/>
-                            <constraint firstAttribute="width" constant="12" id="uPA-3e-G8v"/>
+                            <constraint firstAttribute="height" constant="12" id="Wc5-Uh-IDe"/>
+                            <constraint firstAttribute="width" constant="12" id="qQ1-le-6PN"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="15"/>
                         <state key="normal" title="-">
@@ -75,11 +59,11 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QW5-xP-CdE">
-                        <rect key="frame" x="290" y="71" width="12" height="12"/>
+                        <rect key="frame" x="290" y="82" width="12" height="12"/>
                         <color key="backgroundColor" red="0.25490196079999999" green="0.25490196079999999" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="12" id="8Q5-nF-lmt"/>
-                            <constraint firstAttribute="height" constant="12" id="pJb-G5-Qsd"/>
+                            <constraint firstAttribute="width" constant="12" id="AmK-fY-xMm"/>
+                            <constraint firstAttribute="height" constant="12" id="LaW-Wn-Mms"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="15"/>
                         <state key="normal" title="+">
@@ -89,24 +73,79 @@
                             <action selector="plusButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="T44-9P-AOY"/>
                         </connections>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="£" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="smW-fd-VOu">
+                        <rect key="frame" x="30" y="32" width="130" height="26"/>
+                        <color key="backgroundColor" red="0.25490196078431371" green="0.25490196078431371" blue="0.25490196078431371" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="130" id="Be9-sN-mh9"/>
+                            <constraint firstAttribute="height" constant="26" id="J1T-tP-TYp"/>
+                            <constraint firstAttribute="height" constant="26" id="Mko-aR-gqg"/>
+                            <constraint firstAttribute="height" constant="26" id="YMP-OX-foy"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="14"/>
+                        <color key="textColor" red="0.95686274510000002" green="0.69019607839999997" blue="0.23137254900000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Be9-sN-mh9"/>
+                                <exclude reference="J1T-tP-TYp"/>
+                                <exclude reference="Mko-aR-gqg"/>
+                                <exclude reference="YMP-OX-foy"/>
+                            </mask>
+                        </variation>
+                    </label>
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text=" 0" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ukx-QD-x5v">
+                        <rect key="frame" x="159" y="32" width="130" height="26"/>
+                        <color key="backgroundColor" red="0.25490196079999999" green="0.25490196079999999" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="26" id="78s-de-v0U"/>
+                            <constraint firstAttribute="width" constant="130" id="KUE-cq-gsZ"/>
+                            <constraint firstAttribute="height" constant="26" id="niK-Sj-e4O"/>
+                        </constraints>
+                        <color key="textColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
+                        <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="14"/>
+                        <textInputTraits key="textInputTraits"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="78s-de-v0U"/>
+                                <exclude reference="KUE-cq-gsZ"/>
+                            </mask>
+                        </variation>
+                        <connections>
+                            <outlet property="delegate" destination="-1" id="D0H-zM-UGm"/>
+                        </connections>
+                    </textField>
                 </subviews>
                 <color key="backgroundColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstItem="QW5-xP-CdE" firstAttribute="leading" secondItem="ISQ-4m-YEC" secondAttribute="trailing" constant="8" id="6jp-gN-xHK"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="QW5-xP-CdE" secondAttribute="trailing" constant="10" id="8Bq-4p-JcK"/>
-                    <constraint firstItem="owe-f5-37h" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="2" id="AWp-iO-itU"/>
-                    <constraint firstItem="ukx-QD-x5v" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="30" id="EXj-1x-rfM"/>
-                    <constraint firstItem="DQR-uk-sx8" firstAttribute="top" secondItem="owe-f5-37h" secondAttribute="bottom" constant="40" id="Od7-Na-Mkd"/>
-                    <constraint firstItem="ISQ-4m-YEC" firstAttribute="leading" secondItem="DQR-uk-sx8" secondAttribute="trailing" constant="8" id="Ofm-nm-TLC"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="ukx-QD-x5v" secondAttribute="trailing" constant="30" id="Oop-dD-fYX"/>
-                    <constraint firstItem="ISQ-4m-YEC" firstAttribute="top" secondItem="ukx-QD-x5v" secondAttribute="bottom" constant="2" id="R6a-Ay-SZd"/>
-                    <constraint firstItem="ukx-QD-x5v" firstAttribute="top" secondItem="owe-f5-37h" secondAttribute="bottom" constant="1" id="SMn-bj-B7c"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="owe-f5-37h" secondAttribute="trailing" id="doo-cw-tRX"/>
-                    <constraint firstItem="QW5-xP-CdE" firstAttribute="leading" secondItem="ISQ-4m-YEC" secondAttribute="trailing" constant="8" id="fFZ-cM-0NU"/>
-                    <constraint firstItem="owe-f5-37h" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="jgR-yN-YDz"/>
-                    <constraint firstItem="DQR-uk-sx8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="nkk-ps-Tc3"/>
-                    <constraint firstItem="QW5-xP-CdE" firstAttribute="top" secondItem="owe-f5-37h" secondAttribute="bottom" constant="40" id="uhT-u2-zDY"/>
+                    <constraint firstItem="DQR-uk-sx8" firstAttribute="top" secondItem="ISQ-4m-YEC" secondAttribute="top" constant="9" id="07h-ob-R3p"/>
+                    <constraint firstAttribute="trailing" secondItem="ukx-QD-x5v" secondAttribute="trailing" constant="31" id="7mf-TW-UF3"/>
+                    <constraint firstItem="ukx-QD-x5v" firstAttribute="width" secondItem="smW-fd-VOu" secondAttribute="width" id="BAs-Uw-02X"/>
+                    <constraint firstItem="DQR-uk-sx8" firstAttribute="bottom" secondItem="ISQ-4m-YEC" secondAttribute="bottom" constant="-9" id="D8h-LA-5SQ"/>
+                    <constraint firstItem="DQR-uk-sx8" firstAttribute="top" secondItem="QW5-xP-CdE" secondAttribute="top" id="Dxe-kg-P81"/>
+                    <constraint firstAttribute="trailing" secondItem="owe-f5-37h" secondAttribute="trailing" constant="8" id="H7v-Sp-nig"/>
+                    <constraint firstItem="smW-fd-VOu" firstAttribute="bottom" secondItem="ukx-QD-x5v" secondAttribute="bottom" id="Iw6-vU-r9h"/>
+                    <constraint firstAttribute="bottom" secondItem="DQR-uk-sx8" secondAttribute="bottom" constant="9.5" id="J2E-HN-SIl"/>
+                    <constraint firstItem="ISQ-4m-YEC" firstAttribute="leading" secondItem="DQR-uk-sx8" secondAttribute="trailing" constant="8" id="L6j-iS-dy6"/>
+                    <constraint firstAttribute="bottom" secondItem="ISQ-4m-YEC" secondAttribute="bottom" constant="4.5" id="NMo-NW-l8h"/>
+                    <constraint firstItem="smW-fd-VOu" firstAttribute="top" secondItem="ukx-QD-x5v" secondAttribute="top" id="Q9J-5t-3ZX"/>
+                    <constraint firstItem="smW-fd-VOu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="XTI-os-fsj"/>
+                    <constraint firstItem="DQR-uk-sx8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="esR-jk-i6L"/>
+                    <constraint firstItem="ukx-QD-x5v" firstAttribute="leading" secondItem="smW-fd-VOu" secondAttribute="trailing" constant="-1" id="hyU-TU-CH1"/>
+                    <constraint firstItem="DQR-uk-sx8" firstAttribute="bottom" secondItem="QW5-xP-CdE" secondAttribute="bottom" id="hz8-fp-aIZ"/>
+                    <constraint firstAttribute="trailing" secondItem="QW5-xP-CdE" secondAttribute="trailing" constant="18" id="t1p-i4-YP7"/>
+                    <constraint firstItem="QW5-xP-CdE" firstAttribute="leading" secondItem="ISQ-4m-YEC" secondAttribute="trailing" constant="8" id="to6-FI-Ms4"/>
+                    <constraint firstItem="ukx-QD-x5v" firstAttribute="top" secondItem="owe-f5-37h" secondAttribute="bottom" constant="1" id="vIj-U3-q3y"/>
+                    <constraint firstItem="owe-f5-37h" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="vbe-nO-OQX"/>
+                    <constraint firstItem="owe-f5-37h" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="viL-BQ-Ofz"/>
+                    <constraint firstItem="ISQ-4m-YEC" firstAttribute="top" secondItem="smW-fd-VOu" secondAttribute="bottom" constant="11" id="wnC-96-ScD"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="NMo-NW-l8h"/>
+                        <exclude reference="wnC-96-ScD"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="costTextField" destination="ukx-QD-x5v" id="a5P-4f-Fvz"/>
@@ -114,7 +153,7 @@
                 <outlet property="plusButton" destination="QW5-xP-CdE" id="Z3f-ee-QVs"/>
                 <outlet property="slider" destination="ISQ-4m-YEC" id="fyY-2H-QRh"/>
             </connections>
-            <point key="canvasLocation" x="555" y="393.5"/>
+            <point key="canvasLocation" x="233" y="229"/>
         </tableViewCell>
     </objects>
 </document>
