--- a/Savio/SACreateSavingPlanViewController/SavingPageView.xib
+++ b/Savio/SACreateSavingPlanViewController/SavingPageView.xib
@@ -9,6 +9,7 @@
         <mutableArray key="gotham-rounded-book-2.otf">
             <string>GothamRounded-Book</string>
             <string>GothamRounded-Book</string>
+            <string>GothamRounded-Book</string>
         </mutableArray>
     </customFonts>
     <objects>
@@ -24,14 +25,25 @@
                 <view tag="2" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="SYK-zo-4rC">
                     <rect key="frame" x="60" y="35" width="480" height="525"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="divider-pound.png" translatesAutoresizingMaskIntoConstraints="NO" id="wij-Ut-mOa">
+                        <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOU HAVE NO ITMES IN YOUR WISHLIST. ADD THE THINGS YOU WANT TO SAVE UP FOR USING OUR BROWSER BOOKMARKLETS" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="daa-Wh-3j0">
+                            <rect key="frame" x="158" y="221" width="164" height="83"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="83" id="3UJ-cl-miN"/>
+                                <constraint firstAttribute="width" secondItem="daa-Wh-3j0" secondAttribute="height" multiplier="164:83" id="N8M-0e-7VB"/>
+                                <constraint firstAttribute="width" constant="164" id="e73-FU-DA2"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="11"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <imageView userInteractionEnabled="NO" tag="6" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="divider-pound.png" translatesAutoresizingMaskIntoConstraints="NO" id="wij-Ut-mOa">
                             <rect key="frame" x="193" y="255" width="94" height="16"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="16" id="UN1-Bx-7xw"/>
                                 <constraint firstAttribute="width" constant="94" id="n9E-wK-HdZ"/>
                             </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SPECIALIZED XC COMP" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uP2-Ie-Ro0">
+                        <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SPECIALIZED XC COMP" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uP2-Ie-Ro0">
                             <rect key="frame" x="193" y="222" width="94" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="uP2-Ie-Ro0" secondAttribute="height" multiplier="47:15" id="TNo-pb-FO0"/>
@@ -42,7 +54,7 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1400" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="277-RP-G3e">
+                        <label opaque="NO" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1400" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="277-RP-G3e">
                             <rect key="frame" x="196" y="274" width="87" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="40d-u3-bNV"/>
@@ -58,10 +70,12 @@
                     <constraints>
                         <constraint firstItem="wij-Ut-mOa" firstAttribute="centerY" secondItem="SYK-zo-4rC" secondAttribute="centerY" id="60C-95-wly"/>
                         <constraint firstItem="277-RP-G3e" firstAttribute="top" secondItem="wij-Ut-mOa" secondAttribute="bottom" constant="3" id="bnu-Bb-EtB"/>
+                        <constraint firstItem="daa-Wh-3j0" firstAttribute="centerY" secondItem="SYK-zo-4rC" secondAttribute="centerY" id="br1-OO-AaZ"/>
                         <constraint firstItem="wij-Ut-mOa" firstAttribute="centerX" secondItem="SYK-zo-4rC" secondAttribute="centerX" id="btJ-2m-ggt"/>
                         <constraint firstItem="277-RP-G3e" firstAttribute="centerX" secondItem="SYK-zo-4rC" secondAttribute="centerX" id="faO-2K-rfk"/>
                         <constraint firstItem="uP2-Ie-Ro0" firstAttribute="centerX" secondItem="SYK-zo-4rC" secondAttribute="centerX" id="h46-lP-Ktl"/>
                         <constraint firstItem="wij-Ut-mOa" firstAttribute="top" secondItem="uP2-Ie-Ro0" secondAttribute="bottom" constant="3" id="hHQ-bO-xyY"/>
+                        <constraint firstItem="daa-Wh-3j0" firstAttribute="centerX" secondItem="SYK-zo-4rC" secondAttribute="centerX" id="xQb-ka-DhB"/>
                     </constraints>
                 </view>
             </subviews>
