--- a/Savio/SAOfferList/SAOfferListViewController.xib
+++ b/Savio/SAOfferList/SAOfferListViewController.xib
@@ -5,7 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SAWishListViewController" customModule="Savio" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SAOfferListViewController" customModule="Savio" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -15,21 +15,20 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleAspectFit" alwaysBounceVertical="YES" style="plain" separatorStyle="default" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Sfe-Vn-4cP">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5db-mO-Sls">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
-                        <outlet property="dataSource" destination="-1" id="DVx-U0-edP"/>
-                        <outlet property="delegate" destination="-1" id="Ts5-0A-Kbd"/>
+                        <outlet property="dataSource" destination="-1" id="5iz-Be-2sT"/>
+                        <outlet property="delegate" destination="-1" id="ek6-DP-7Tu"/>
                     </connections>
                 </tableView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="Sfe-Vn-4cP" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="HMH-5y-A2L"/>
-                <constraint firstItem="Sfe-Vn-4cP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="O55-kI-6gT"/>
-                <constraint firstAttribute="trailing" secondItem="Sfe-Vn-4cP" secondAttribute="trailing" id="S5U-MW-ipc"/>
-                <constraint firstAttribute="bottom" secondItem="Sfe-Vn-4cP" secondAttribute="bottom" id="yRw-IW-544"/>
+                <constraint firstItem="5db-mO-Sls" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="2ry-9F-uDE"/>
+                <constraint firstAttribute="trailing" secondItem="5db-mO-Sls" secondAttribute="trailing" id="UpR-BN-yJm"/>
+                <constraint firstAttribute="bottom" secondItem="5db-mO-Sls" secondAttribute="bottom" id="XjM-r3-cRJ"/>
+                <constraint firstItem="5db-mO-Sls" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ZRd-Ib-b4E"/>
             </constraints>
         </view>
     </objects>
