--- a/Savio/SavingPlanSetup/SASavingPlanViewController.xib
+++ b/Savio/SavingPlanSetup/SASavingPlanViewController.xib
@@ -56,7 +56,7 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.63921570780000003" green="0.63529413940000001" blue="0.63921570780000003" alpha="1" colorSpace="deviceRGB"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="M9o-cd-Fof" secondAttribute="bottom" constant="40" id="1QY-t0-Sqq"/>
                         <constraint firstItem="M9o-cd-Fof" firstAttribute="leading" secondItem="x7I-Oc-D2D" secondAttribute="leading" constant="60" id="2XB-cQ-EKv"/>
